data/derived/fa15/progs/unify/prog2180.ml.out
Characters 166-167:
  in (go x)
         ^
Error: This expression has type int -> int
       but an expression was expected of type int
